Ref #26604 after much research the core of the problem found and solved
The solution was rather unintuitive. Column constraints could not work
properly if the minimun width was not explicitelly set to 0. This was
discovered from the following link: https://stackoverflow.com/questions/10767406/javafx-2-gridpane-rows-overlap-when-using-percentheight

--- a/src/main/resources/css/background-division.css
+++ b/src/main/resources/css/background-division.css
@@ -1,27 +1,77 @@
 * {
+
     -fx-box-sizing: border-box;
+
 }
+
+
 
 .main-left {
-    -fx-background-color: gray;
+
+    -fx-width: 25%;
+
+    -fx-float: left;
+
+    -fx-background-color: white;
+
 }
+
+
 
 .square-button {
+
+    -fx-width: 20%;
+
+    -fx-float: right;
+
+    -fx-background-color: white;
+
 }
 
+
+
 .main-right {
+
+    -fx-width: 75%;
+
+    -fx-float: left;
+
     -fx-background-color: rgba(0, 50, 250, 0.005);
+
 }
+
+
+
 
 
 .question-box {
 
+    -fx-width: 20%;
+
+    -fx-float: left;
+
 }
+
+
 
 .answer-box {
 
+    -fx-width: 16%;
+
+    -fx-float: left;
+
+
+
 }
 
+
+
 .button-box {
+
+    -fx-width: 16%;
+
+    -fx-float: left;
+
+
 
 }
